--- a/package.json
+++ b/package.json
@@ -7,11 +7,9 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-
     "lint": "run-s lint:*",
     "lint:eslint": "eslint **/*.{js,jsx,ts,tsx}",
     "lint:stylelint": "stylelint '**/*.{css,scss}'",
-
     "lint-fix": "run-s lint-fix:*",
     "lint-fix:eslint": "eslint --fix **/*.{js,jsx,ts,tsx}",
     "lint-fix:stylelint": "stylelint --fix '**/*.{css,scss}'"
@@ -22,8 +20,6 @@
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
-    "typescript": "^4.9.3",
-    "react-scripts": "5.0.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -31,7 +27,6 @@
     "@types/node": "^16.18.3",
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.9",
-
     "eslint": "8.22.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-config-standard": "latest",
@@ -41,6 +36,10 @@
     "eslint-plugin-promise": "^6.0.0",
     "eslint-plugin-unicorn": "^43.0.2",
     "eslint-plugin-unused-imports": "^2.0.0",
+    "npm-run-all": "^4.1.5",
+    "prettier": "^2.7.1",
+    "react-scripts": "5.0.1",
+    "sass": "^1.56.1",
     "stylelint": "^14.9.1",
     "stylelint-config-prettier": "^9.0.3",
     "stylelint-config-rational-order": "^0.1.2",
@@ -48,8 +47,7 @@
     "stylelint-order": "^5.0.0",
     "stylelint-prettier": "^2.0.0",
     "stylelint-scss": "^4.3.0",
-    "npm-run-all": "^4.1.5",
-    "prettier": "^2.7.1"
+    "typescript": "^4.9.3"
   },
   "eslintConfig": {
     "extends": [
