--- a/package.json
+++ b/package.json
@@ -5,16 +5,21 @@
   "scripts": {
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
-    "test": "node scripts/test.js",
-    "lint": "run-s lint:*",
+    "husky": "run-s husky:* --silent",
+    "husky:lint": "npm run lint",
+    "husky:test": "npm run test",
+    "test": "jest --verbose",
+    "lint": "run-s lint:* --silent",
     "lint:eslint": "eslint **/*.{js,jsx,ts,tsx}",
     "lint:stylelint": "stylelint '**/*.{css,scss}'",
     "lint-fix": "run-s lint-fix:*",
     "lint-fix:eslint": "eslint --fix **/*.{js,jsx,ts,tsx}",
-    "lint-fix:stylelint": "stylelint --fix '**/*.{css,scss}'"
+    "lint-fix:stylelint": "stylelint --fix '**/*.{css,scss}'",
+    "prepare": "husky install"
   },
   "dependencies": {
     "@ant-design/dark-theme": "^2.0.2",
+    "antd": "^5.0.1",
     "bfj": "^7.0.2",
     "browserslist": "^4.18.1",
     "camelcase": "^6.2.1",
@@ -66,6 +71,7 @@
     "eslint-plugin-unused-imports": "^2.0.0",
     "eslint-webpack-plugin": "^3.1.1",
     "html-webpack-plugin": "^5.5.0",
+    "husky": "^8.0.0",
     "jest": "^27.4.3",
     "jest-resolve": "^27.4.2",
     "jest-watch-typeahead": "^1.0.0",
